<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login, here we go!</string>
    <string name="email_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="cancel_txt">Cancel</string>
    <string name="login_txt">Login</string>
    <string name="forgot_password_txt">I forgot my password</string>
    <string name="title_activity_stream">StreamActivity</string>
    <string name="instagram_user">username</string>

</resources>
