<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bkgd">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:alpha="0.5"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_gravity="center"
            android:text="@string/login_title"/>
        <EditText
            android:id="@+id/et_username"
            style = "@style/LoginEditText"
            android:hint="@string/email_hint"/>
        <EditText
            android:id="@+id/et_password"
            style = "@style/LoginEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/cancel_txt"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_alignParentRight="true"
                android:text="@string/login_txt"/>
            </RelativeLayout>
        <TextView
            android:id="@+id/forgot_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forgot_password_txt"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            />
        </LinearLayout>

</RelativeLayout>
